Attempted cropping fix for mobile devices

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -32,6 +32,7 @@ body {
     font-family: 'Yanone Kaffeesatz';
     font-size: 16pt;
     margin-left: 10%;
+    margin-right: 5%;
     width:100%;
     
    
